--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.3",
-    "rxjs": "^6.6.2"
+    "rxfire": "^6.0.3",
+    "rxjs": "^6.6.7"
   },
   "scripts": {
     "start": "react-scripts start",
